# hype-frog

./: .claudeignore  .cursorignore  .cursorrules  .env  .env.example  .gitignore  AUDIT.md  AUDIT_FIX_LOG.md  CHANGELOG.md  CLAUDE.md  CRAWL_REPLAY_PLAN.md  DISTRIBUTION.md  Hypefrog full backlog.md  Hypefrog governance sync prompt.md  Hypefrog html report prompt.md  Hypefrog xlsx output audit.html  PERF_TODO.md  README.md  SEO_AEO_Audit_africanmarketingconfederation.org_phase1_verify.html  SEO_AEO_Audit_africanmarketingconfederation.org_phase1_verify.xlsx  SEO_AEO_Audit_africanmarketingconfederation.org_phase1_verify_delta_summary.json  SEO_AEO_Audit_africanmarketingconfederation.org_phase1_verify_temp_cache.db  TEST_AUDIT.md  WORKBOOK_AUDIT.md  _tmp_columns_dump.txt  build_exe.py  commands.md  config.py  excel_workbook_ui_ux_refurbishment.md  hype_frog.spec  loop_commands.md  main.py  models.py  principal_staff_audit_bundle.xml  pyproject.toml  pytest.ini  requirements.txt  setup_structure.py  smoke_urls.txt  smoke_urls_15.txt  (+5 more)
.cache/: gsc_inspection.sqlite
.claude/: settings.json
.cursor/: mcp.json  mcp.json.example
.old/: SEO_AEO_Audit_africanmarketingconfederation.org_20260501_131249.xlsx  SEO_AEO_Audit_africanmarketingconfederation.org_20260502_131408.xlsx  seo_audit_africanmarketingconfederation.org_page-sitemap.xml_full.xlsx  seo_audit_africanmarketingconfederation.org_page-sitemap.xml_full_20260430_071926.xlsx  seo_audit_africanmarketingconfederation.org_page-sitemap.xml_full_20260430_080149.xlsx  seo_audit_africanmarketingconfederation.org_page-sitemap.xml_full_20260430_095550.xlsx  seo_audit_asconafrica.org_page-sitemap.xml_full_20260430_090525.xlsx  seo_audit_ticonafrica.org_page-sitemap.xml_full_20260430_084913.xlsx
8phase_update/: 8phase_update - Cursor IDE Agent Instructions.md
archive/: hop.py
archive_legacy/: AUDIT.md  Hypefrog top8 cursorprompt.md  IMPROVEMENTS.md  LOGGING_TODO.md  PSI Lighthouse.md  REPORT_IMPROVEMENT_PLAN.md  SEO_AEO_Audit_africanmarketingconfederation.org_20260510_135005.xlsx  TEST_AUDIT_REPORT.md  WORKBOOK_IMPROVEMENT_PLAN.md  output_sheet_ux_analysis.md
checkpoint/: cache.py  store.py
core/: cli.py  logger.py
crawler/: __init__.py  client.py  fetcher.py  gsc_engine.py  psi.py  psi_engine.py  sitemap.py
docs/: architecture_overview.md  crawler_engine.md  data_contracts.md  excel_reporting_standards.md  logging_architecture.md  performance_benchmarks.md  system_architecture.md  wave1_excel_engine_plan.md  wave2_pydantic_plan.md  workbook_tabs.md
extractors/: __init__.py  schema.py
pipeline/: __init__.py  enrich.py  export.py
quick_docs/: audit_context_injection_prompt.md  critical_frog_context.md
reporters/: __init__.py  excel.py  formatting.py  tabs.py
rules/: registry.py  scoring.py
scripts/: _check_snapshot_state.py  _inspect_checkpoint.py  _phase0_inspect_full.json  _phase0_inspect_output.json  _phase0_metrics.py  _phase0_metrics_full.json  _phase0_summary.py  _phase0_workbook_inspect.py  _run_full_crawl_once.py  _run_quick_via_orchestrator.py  _run_regen_report_test.py  _tmp_qa_workbook_audit.py  benchmark_crawl.py  build.py  crawl_matrix_audit.py  run_full_crawl.ps1  (+3 more)
(+492 files in other folders)
