[project]
name = "hype-frog"
version = "0.1.0"
description = "Technical site crawl and workbook reporting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "networkx>=3.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
render = ["playwright>=1.40.0"]

[project.scripts]
hype-frog = "hype_frog.main:run"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["hype_frog"]

[tool.hatch.build.targets.sdist]
include = ["src/hype_frog", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
