[project]
name = "hype-frog"
version = "0.2.0"
description = "Technical site crawl and workbook reporting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "networkx>=3.0",
    "scipy>=1.11.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "playwright>=1.59.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
render = ["playwright>=1.40.0"]

[project.scripts]
hype-frog = "hype_frog.main:run"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
