[project]
name = "hype-frog"
version = "0.3.0"
description = "Technical site crawl and workbook reporting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.5",
    "beautifulsoup4==4.14.3",
    "lxml==6.1.0",
    "networkx==3.6.1",
    "scipy==1.17.1",
    "openpyxl==3.1.5",
    "pandas==3.0.2",
    "pydantic==2.13.3",
    "python-dotenv==1.2.2",
    "google-api-python-client==2.195.0",
    "google-auth-oauthlib==1.3.1",
    "playwright==1.59.0",
    "simhash==2.1.2",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "reportlab==4.4.2",
    "rich==15.0.0",
    "structlog==26.1.0",
]

[project.optional-dependencies]
semantic = [
    "spacy>=3.8.14",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pyinstaller>=6.0",
]
render = ["playwright==1.59.0"]
llm = ["openai>=1.0.0"]

[project.scripts]
hype-frog = "hype_frog.main:run"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pypdf>=6.14.2",
]
